Text messages on android are no longer covered by the input field.

--- a/shutAppMobile/www/css/style.css
+++ b/shutAppMobile/www/css/style.css
@@ -159,3 +159,6 @@ ion-nav-view {
   padding: 0.3rem;
   border-radius: 0.3rem;
 }
+.android-margin-bottom {
+  margin-bottom: 1rem;
+}
